# anura-data-model

./: .gitignore  README.md  buf.gen.yaml  pyproject.toml  requirements.txt  requirements.txt.old  setup.py
.github/: dependabot.yml
.github/workflows/: anura-gw-build.yml  anura-model-build.yml
model/: aggregated.proto  buf.yaml  commons.proto  health.proto  raw.proto  thresholds.proto
tests/: README.md  buf.gen.yaml  rename.proto  test.proto  test_protobuf_rename.py  test_protobuf_serialization.py
