[tool.poetry]
name = "anura-data-model"
version = "0.5.0"
description = "Data model for Anura Protobuf format"
authors = ["Erik Finnman <erik.finnman@layer10.se>"]
readme = "README.md"
packages = [{include = "anuradatamodel"}]
include = ["anuradatamodel/**/*"]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = "1.2.5"


[build-system]
requires = ["poetry-core","twine==4.0.2", "betterproto[compiler]==1.2.5"]
build-backend = "poetry.core.masonry.api"
